ci: test on oldest and newest supported python version

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,11 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - python: '3.10'
+          - python: '3.14'
     steps:
     - uses: actions/checkout@v6
     - uses: actions/setup-python@v6
